# AptSourcesList.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  grammar.yug  pyproject.toml  setup.cfg
.ci/: pythonPackagesToInstallFromGit.txt
AptSourcesList/: Record.py  RecordParser.py  __init__.py  __main__.py  grammar.pglr  waxeye_parser.py
AptSourcesList/parserBundle/compiled/TatSu/: apt_source.py
AptSourcesList/parserBundle/compiled/antlr4/: apt_sourceLexer.interp  apt_sourceLexer.py  apt_sourceLexer.tokens  apt_sourceListener.py  apt_sourceParser.py
AptSourcesList/parserBundle/compiled/parglare/: apt_source.pg
AptSourcesList/parserBundle/compiled/parsimonious/: apt_source.ppeg
AptSourcesList/parserBundle/compiled/waxeye/: apt_source_parser.py
AptSourcesList/parserBundle/schemas/capless/: apt_source.json
AptSourcesList/parserBundle/schemas/iterless/: apt_source.json
AptSourcesList/parserBundle/wrappers/: apt_source.py
grammars/: apt.g4  grammar.atg  grammar.waxeye
tests/: sources.list
