[build-system]
requires = ["setuptools>=62.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "AptSourcesList"
# version = 0.1
authors = [{name = "KOLANICH"}]
description = "A package to parse and serizlize APT source.list files"
readme = "ReadMe.md"
keywords = ["APT", "debian", "ubuntu"]
license = {text = "Unlicense"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"UniGrammarRuntime", # @ git+https://codeberg.org/UniGrammar/UniGrammarRuntime.py.git
]

[project.urls]
Homepage = "https://codeberg.org/KFmts/AptSourcesList.py"

[project.optional-dependencies]
waxeye = [
	"waxeye", # @ git+https://github.com/waxeye-org/waxeye.git#subdirectory=src/python
]
parglare = [
	"parglare" # @ git+https://github.com/igordejanovic/parglare.git"
]
antlr = [
	"antlr4-python3-runtime", # @ git+https://github.com/antlr/antlr4.git#subdirectory=runtime/Python3"
] 

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
